--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <div>
             <form>
-                <label> first name</label>
+                <label> First name</label>
                 <input type="text" name="firstname" placeholder="Type your first name">
                 <label> Last name</label>
                 <input type="text" name="Last name" placeholder="Type your Last name">
